--- a/seng401-project/src/components/styles/Recipes.css
+++ b/seng401-project/src/components/styles/Recipes.css
@@ -20,7 +20,6 @@
     color: #130e41;
     font-size: 30px;
     cursor: pointer;
-    margin-bottom: 25px;
   }
   
   .view-toggle button:hover {
